# ai-assistant-rag

./: .gitignore  README.md  docker-compose-ssl.yml  docker-compose-stg.yml  docker-compose.yml
asset_processor/: .env.example  Dockerfile  Dockerfile.dev  README.md  envs.py  logger.py  pyproject.toml
asset_processor/asset_processor/: runner.py
asset_processor/helpers/: capture_exception.py  schema.py  scrape.py  utils.py
backend/: .env.example  Dockerfile  Dockerfile.dev  README.md  app.py  errors.py  gunicorn_config.py  pyproject.toml  settings.py
backend/asset/: models.py  routes.py
backend/aws/: session.py
backend/bot/: models.py  routes.py  schemas.py
backend/bot_assets/: models.py
backend/cache/: __init__.py
backend/client/: models.py  routes.py  schemas.py
backend/embedding/: models.py
backend/message/: models.py  schemas.py
backend/middleware/: api_key.py  rate_limit.py
backend/migrations/versions/: 21e83fd475da_session_message_models_added.py  7c0e1ba5d2ab_bot_deployed_at_column.py  c90457ebbab7_add_cfg_type_on_message.py  ce279678260c_init.py  d75673328580_remove_unique_constraint_on_client_name.py  d7b1cfcc04f2_rm_uniqueness_of_bot_names.py
backend/mq/: __init__.py
backend/rag/: answer.py  config.py  utils.py
backend/s3/: __init__.py
backend/session/: models.py  routes.py  schemas.py
backend/tests/: conftest.py  test_counter.py
backend/utils/: embed_code.py  logger.py  split_url.py
backend/validation/: schemas.py
chatbot_ui/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  jsconfig.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  webpack.config.dev.js  webpack.config.prod.js
chatbot_ui/deploy/: .env.example  deploy.sh
chatbot_ui/src/: config.js  index.js
eso/: .env.example  apply-secrets.sh  create-secrets.sh
k8s/app/: asset-processor.yaml  backend.yaml  chatbot-ui.yaml  sitemap-processor.yaml
k8s/config/: config.yaml  eso.yaml  secretstore.yaml
k8s/ingress/: certissuer.yaml  ingress.yaml  (+1 more)
localstack/: .env.example
nginx/: Dockerfile.ssl  nginx-sample.conf  nginx.conf
rabbitmq/: Dockerfile
sitemap_processor/: .env.example  README.md  envs.py  logger.py  pyproject.toml
sitemap_processor/db/: __init__.py
sitemap_processor/helpers/: schema.py  sitemap.py
sitemap_processor/sitemap_processor/: runner.py
(+25 files in other folders)
